# manipulator_ws

./: .gitignore  README.md  frames_2025-11-07_01.16.49.gv  frames_2026-01-13_23.11.19.gv  frames_2026-01-13_23.15.07.gv  frames_2026-01-18_14.17.05.gv  frames_2026-01-18_16.35.30.gv  frames_2026-01-18_16.56.46.gv  manipulator.urdf
src/: README.md
src/arduinobot_cpp_examples/: CMakeLists.txt  package.xml
src/arduinobot_cpp_examples/src/: my_node.cpp
src/arduinobot_py_examples/: README.md  package.xml  setup.py
src/arduinobot_py_examples/arduinobot_py_examples/: simple_action_client.py  simple_action_server.py  simple_moveit_interface.py  simple_parameter.py  simple_publisher.py  simple_service_client.py  simple_service_server.py  simple_subscriber.py
src/arduinobot_py_examples/launch/: simple_moveit_interface.launch.py
src/manipulator_bringup/: CMakeLists.txt  package.xml
src/manipulator_bringup/launch/: bringup.launch.py
src/manipulator_controller/: CMakeLists.txt  README.md  package.xml
src/manipulator_controller/config/: manipulator_controller.yaml
src/manipulator_controller/launch/: controller.launch.py
src/manipulator_moveit/: CMakeLists.txt  README.md  package.xml
src/manipulator_moveit/config/: initial_positions.yaml  joint_limits.yaml  (+9 more)
src/manipulator_msgs/: CMakeLists.txt  package.xml
src/manipulator_remote/: CMakeLists.txt  package.xml
src/manipulator_utils/: CMakeLists.txt  README.md  package.xml
src/manipulator_utils/manipulator_utils/: angle_conversion.py
src/robot_description/: CMakeLists.txt  README.md  package.xml
(+18 files in other folders)
