<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manipulator_utils</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="serveronthego1@gmail.com">syed</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- Adding dependencies for python nodes in C++ -->
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- adding dependencies -->
  <depend>rclpy</depend>
  <depend>manipulator_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
